# BlockSchemeGenerator

./: CMakeLists.txt
include/: canvas.h  mainwindow.h
src/: canvas.cpp  main.cpp  mainwindow.cpp
